@@ -1,6 +1,10 @@
 
 2010-January-16 Struan Robertson
 
+	* MolecularComponents.h/.cpp: Move exponential down model material onto specfic model.
+
+2010-January-16 Struan Robertson
+
 	* MolecularComponents.h/.cpp: Initial changes to allow for specification of energy transfer model.
 
 2010-January-15 Struan Robertson
